--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,5 @@
     <string name="menu_slideshow">Slideshow</string>
 
     <string name="title_post">Title</string>
+    <string name="title_activity_edit_advertisement">EditAdvertisement</string>
 </resources>
